# PasswordManagerCPP

./: .gitignore  CMakeLists.txt  README.md  test_password_manager
src/: main.cpp
src/cli/: Menu.cpp  Menu.h
src/core/: Account.cpp  Account.h  AuthManager.cpp  AuthManager.h  PasswordManager.cpp  PasswordManager.h
src/crypto/: Crypto.cpp  Crypto.h
src/storage/: Storage.cpp  Storage.h
src/utils/: Logger.cpp  Logger.h  utils.cpp  utils.h
tests/: test_account.cpp  test_crypto.cpp  test_main.cpp  test_password_manager.cpp  test_storage.cpp
